se crea usuario con validación muy básica

--- a/src/java/com/javier/texts/messages_en.properties
+++ b/src/java/com/javier/texts/messages_en.properties
@@ -28,6 +28,10 @@ ITEM_ID = Id
 ## error messages
 ERROR_MESSAGE_INVALID_QTY = Is not a valid quantity
 ERROR_MESSAGE_INVALID_PRICE = Is not a valid price
+ERROR_MESSAGE_NO_VALID_CHARACTERS_FOR_PASSWORD = contains unallowed characters for password
+ERROR_MESSAGE_PASSWORD_TOO_SHORT = is too short
+ERROR_MESSAGE_EMPTY_PASSWORD = cannot be empty
+ERROR_MESSAGE_NO_VALID_EMAIL_FORMAT = has no a valid email format
 
 ## general messages
 MSG_WELCOME = Welcome to Javier's small Java EE Application Example.
@@ -42,3 +46,13 @@ PURCHASES_LABEL_PURCHASES = Purchases
 
 # users
 USERS_LABEL_USERS = Users
+USER_LABEL_USER_ID = User Id
+USER_LABEL_IMAGE = Image
+USER_LABEL_USERNAME = Username
+USER_LABEL_FIRST_NAME = First Name
+USER_LABEL_LAST_NAME = Last Name
+USER_LABEL_ADD_USER = Add User
+USER_LABEL_EMAIL = Email
+USER_LABEL_ENTER_PASSWORD = Password
+USER_LABEL_ENTER_PASSWORD_AGAIN = Type password again
+USER_LABEL_SAVE_USER = Save User
