--- a/src/java/com/javier/texts/messages_es.properties
+++ b/src/java/com/javier/texts/messages_es.properties
@@ -28,6 +28,10 @@ ITEM_ID = Identificador
 ## error messages
 ERROR_MESSAGE_INVALID_QTY = no es una cantidad v\u00e1lida
 ERROR_MESSAGE_INVALID_PRICE = no es un precio v\u00e1lido
+ERROR_MESSAGE_NO_VALID_CHARACTERS_FOR_PASSWORD = contiene caracteres inv\u00e1lidos para una contrase\u00f1a
+ERROR_MESSAGE_PASSWORD_TOO_SHORT = es demasiado corta
+ERROR_MESSAGE_EMPTY_PASSWORD = no puede estar vac\u00eda
+ERROR_MESSAGE_NO_VALID_EMAIL_FORMAT = no tiene formato v\u00e1lido de correo electr\u00f3nico
 
 ## general messages
 MSG_WELCOME = Bienvenido a la peque\u00f1a aplicaci\u00f3n Java EE de ejemplo de Javier.
@@ -42,3 +46,13 @@ PURCHASES_LABEL_PURCHASES = Compras
 
 # users
 USERS_LABEL_USERS = Usuarios
+USER_LABEL_USER_ID = Identificador
+USER_LABEL_IMAGE = Image
+USER_LABEL_USERNAME = Nombre de usuario
+USER_LABEL_FIRST_NAME = Nombres
+USER_LABEL_LAST_NAME = Apellidos
+USER_LABEL_ADD_USER = Agregar Usuario
+USER_LABEL_EMAIL = Email
+USER_LABEL_ENTER_PASSWORD = Contrase\u00f1a
+USER_LABEL_ENTER_PASSWORD_AGAIN = Escriba la contrase\u00f1a de nuevo
+USER_LABEL_SAVE_USER = Guardar usuario
