Se mejora login, se crean cuentas de usuarios, se crea logout

--- a/src/java/com/javier/texts/messages_es.properties
+++ b/src/java/com/javier/texts/messages_es.properties
@@ -3,6 +3,7 @@ INDEX_USERNAME = Nombre de usuario
 INDEX_PASSWORD = Contrase\u00f1a
 INDEX_LOGIN = Acceder
 INDEX_SESSION_INIT = Iniciar sesi\u00f3n
+INDEX_LOGOUT = Salir
 
 ## items
 NO_VALID_CHARACTERS_FOR_NAME = contiene caracteres inv\u00e1lidos para un nombre
@@ -47,7 +48,7 @@ PURCHASES_LABEL_PURCHASES = Compras
 # users
 USERS_LABEL_USERS = Usuarios
 USER_LABEL_USER_ID = Identificador
-USER_LABEL_IMAGE = Image
+USER_LABEL_IMAGE = Imagen
 USER_LABEL_USERNAME = Nombre de usuario
 USER_LABEL_FIRST_NAME = Nombres
 USER_LABEL_LAST_NAME = Apellidos
