--- a/src/java/com/javier/texts/messages_en.properties
+++ b/src/java/com/javier/texts/messages_en.properties
@@ -3,6 +3,7 @@ INDEX_USERNAME = Username
 INDEX_PASSWORD = Password
 INDEX_LOGIN = Login
 INDEX_SESSION_INIT = Sign In
+INDEX_LOGOUT = Logout
 
 # items
 NO_VALID_CHARACTERS_FOR_NAME = contains invalid characters for a name
