Se termina crud de usuarios, se incluyen mensajes de notificación y diálogo de confirmación

--- a/src/java/com/javier/texts/messages_es.properties
+++ b/src/java/com/javier/texts/messages_es.properties
@@ -4,6 +4,11 @@ INDEX_PASSWORD = Contrase\u00f1a
 INDEX_LOGIN = Acceder
 INDEX_SESSION_INIT = Iniciar sesi\u00f3n
 INDEX_LOGOUT = Salir
+INDEX_LABEL_ACTIONS = Acciones
+INDEX_LABEL_DELETE = Eliminar
+INDEX_LABEL_UPDATE = Actualizar
+INDEX_DELETE_CONFIRMATION = \u00bfEst\u00e1 seguro?
+INDEX_LABEL_CONFIRMATION = Confirmaci\u00f3n
 
 ## items
 NO_VALID_CHARACTERS_FOR_NAME = contiene caracteres inv\u00e1lidos para un nombre
@@ -38,6 +43,10 @@ ERROR_MESSAGE_NO_VALID_EMAIL_FORMAT = no tiene formato v\u00e1lido de correo ele
 MSG_WELCOME = Bienvenido a la peque\u00f1a aplicaci\u00f3n Java EE de ejemplo de Javier.
 MSG_THERE_ARE = Actualmente hay
 MSG_TITLE = Tienda de Javier
+MSG_TITLE_DELETION = Eliminaci\u00f3n
+MSG_TEXT_USER_DELETION = El usuario ha sido eliminado correctamente
+MSG_TITLE_UPDATING = Actualizaci\u00f3n
+MSG_TEXT_UPDATING = El usuario ha sido actualizado correctamente
 
 #sales
 SALES_LABEL_SALES = Ventas
