--- a/src/java/com/javier/texts/messages_en.properties
+++ b/src/java/com/javier/texts/messages_en.properties
@@ -4,6 +4,11 @@ INDEX_PASSWORD = Password
 INDEX_LOGIN = Login
 INDEX_SESSION_INIT = Sign In
 INDEX_LOGOUT = Logout
+INDEX_LABEL_ACTIONS = Actions
+INDEX_LABEL_DELETE = Delete
+INDEX_LABEL_UPDATE = Update
+INDEX_DELETE_CONFIRMATION = Are you sure?
+INDEX_LABEL_CONFIRMATION = Confirmation
 
 # items
 NO_VALID_CHARACTERS_FOR_NAME = contains invalid characters for a name
@@ -38,6 +43,10 @@ ERROR_MESSAGE_NO_VALID_EMAIL_FORMAT = has no a valid email format
 MSG_WELCOME = Welcome to Javier's small Java EE Application Example.
 MSG_THERE_ARE = Currently there are
 MSG_TITLE = Javier's Store
+MSG_TITLE_DELETION = Deletion
+MSG_TEXT_USER_DELETION = The user was successfully deleted
+MSG_TITLE_UPDATING = Update
+MSG_TEXT_UPDATING = The user was successfully updated
 
 #sales
 SALES_LABEL_SALES = Sales
