Se crean los mensajes necesarios en los crud de usuario y producto

--- a/src/java/com/javier/texts/messages_en.properties
+++ b/src/java/com/javier/texts/messages_en.properties
@@ -47,6 +47,10 @@ MSG_TITLE_DELETION = Deletion
 MSG_TEXT_USER_DELETION = The user was successfully deleted
 MSG_TITLE_UPDATING = Update
 MSG_TEXT_UPDATING = The user was successfully updated
+MSG_TEXT_ITEM_UPDATING = The item was successfully updated
+MSG_TITLE_CREATION = Creation
+MSG_TEXT_USER_CREATION = The user was successfully created
+MSG_TEXT_ITEM_CREATION = The item was successfully created
 
 #sales
 SALES_LABEL_SALES = Sales
