--- a/src/java/com/javier/texts/messages_es.properties
+++ b/src/java/com/javier/texts/messages_es.properties
@@ -47,6 +47,10 @@ MSG_TITLE_DELETION = Eliminaci\u00f3n
 MSG_TEXT_USER_DELETION = El usuario ha sido eliminado correctamente
 MSG_TITLE_UPDATING = Actualizaci\u00f3n
 MSG_TEXT_UPDATING = El usuario ha sido actualizado correctamente
+MSG_TEXT_ITEM_UPDATING = El art\u00edculo ha sido actualizado correctamente
+MSG_TITLE_CREATION = Inserci\u00f3n
+MSG_TEXT_USER_CREATION = El usuario ha sido registrado correctamente
+MSG_TEXT_ITEM_CREATION = El art\u00edculo ha sido registrado correctamente
 
 #sales
 SALES_LABEL_SALES = Ventas
